--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,10 @@ certifi==2023.11.17
 charset-normalizer==3.3.2
 click==8.1.7
 dill==0.3.7
+filelock==3.13.1
 flask==3.0.0
+fsspec==2023.12.2
+huggingface-hub==0.19.4
 idna==3.6
 importlib-metadata==7.0.0
 isort==5.12.0
@@ -13,15 +16,24 @@ Jinja2==3.1.2
 joblib==1.3.2
 MarkupSafe==2.1.3
 mccabe==0.7.0
+mpmath==1.3.0
+networkx==3.1
 nltk==3.8.1
+numpy==1.24.4
+packaging==23.2
 platformdirs==4.1.0
 pylint==3.0.2
+pytz==2023.3.post1
+PyYAML==6.0.1
 regex==2023.10.3
 requests==2.31.0
 schedule==1.2.1
+sympy==1.12
 textblob==0.17.1
+tokenizers==0.15.0
 tomli==2.0.1
 tomlkit==0.12.3
+torch==2.1.1
 tqdm==4.66.1
 typing-extensions==4.8.0
 urllib3==2.1.0
